[gd_scene load_steps=8 format=3 uid="uid://bkigjqfcygmf3"]

[ext_resource type="Script" path="res://src/parts_scripts/bounce_obj.gd" id="1_xru2b"]
[ext_resource type="Texture2D" uid="uid://da1ju62ysrvm4" path="res://assets/sprites/world_tileset.png" id="2_pnuc5"]
[ext_resource type="Texture2D" uid="uid://ebbwpoy1ti26" path="res://assets/sprites/mushroom_bounce_pad.png" id="3_dw8qt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5r6pc"]
atlas = ExtResource("2_pnuc5")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1yv1"]
atlas = ExtResource("3_dw8qt")
region = Rect2(0, 31, 32, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_kmcd5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r6pc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1yv1")
}],
"loop": true,
"name": &"on_gimmick",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2fqf"]
size = Vector2(15.8, 15)

[node name="bounce_obj" type="Node2D"]
script = ExtResource("1_xru2b")

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="Node2D"]
collision_layer = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D/AnimatableBody2D"]
position = Vector2(0, 2.5)
scale = Vector2(0.5, 0.421875)
sprite_frames = SubResource("SpriteFrames_kmcd5")
animation = &"on_gimmick"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/AnimatableBody2D"]
position = Vector2(0.0999999, 2.5)
shape = SubResource("RectangleShape2D_i2fqf")
disabled = true

[node name="Area2DforRaycast" type="Area2D" parent="."]
collision_layer = 16

[connection signal="body_entered" from="Area2DforRaycast" to="." method="_on_area_2_dfor_raycast_body_entered"]
[connection signal="body_exited" from="Area2DforRaycast" to="." method="_on_area_2_dfor_raycast_body_exited"]
